# TeachYou

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  dump.rdb  package-lock.json  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: frontend-build.yml  python-check.yml
api/: index.py  requirements.txt
apps/api/: auth.py  deps.py  main.py  settings.py
apps/worker/: celery_app.py
core/agents/: curator.py  editor.py  qa.py  ref_finder.py  scenegraph.py  supervisor.py  teacher.py
core/broll/: download.py  search.py
core/ingestion/: chunking.py  pdf_extract.py  visuals.py
core/llm/: router.py
core/retrieval/: bm25_retriever.py
core/storyboard/: schema.py  store.py
core/tts/: base.py  espeak.py  google_tts.py  openai_tts.py  router.py
core/utils/: hashing.py  logging.py  text.py
core/video/: assemble.py  captions.py  ffmpeg.py  whiteboard_concat.py
core/visuals/: __init__.py  download.py  web.py  wikimedia.py
core/whiteboard/: __init__.py  html_builder.py  render.py  scenegraph_renderer.py  storyboard.py  svg_builder.py
data/: app.db
data/uploads/: 766988cd-22a5-4747-9cb2-8ea609dfec4c.txt  b378a9f6-59ec-4d12-a775-2800a1688cc8.txt
db/: models.py  session.py
frontend/: .env  README.md  middleware.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: error.tsx  layout.tsx  page.tsx
genai_explainer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
infra/: Dockerfile.api  Dockerfile.frontend  Dockerfile.worker  docker-compose.yml
scripts/: dev_run.sh
(+60 files in other folders)
